--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
                 <li><a href="https://twitter.com/" target="_blank"><i id="twitter" class="fab fa-twitter-square"></i></a></li>
             </ul>
         </div>
+        <div>
+            <p>Country Info Weather and Location <span id="year"></span></p>
+        </div>
     </div>
 </div>
 
